# AI-skin-specialist

./: README.md  brain_of_the_doctor.py  free_text_to speech.py  main.py  pyproject.toml  render.yaml  requirements.txt  voice_of_the_doctor.py  voice_of_the_patient.py
